--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="box">
           <h2>Fun Fact 1</h2>
           <figure>
-          <img src="/images/cutebox1.png" alt="Oops! Image is not available at this time.">
+          <img src="images/cutebox1.png" alt="Oops! Image is not available at this time.">
           <figcaption>Three kingdoms -- Baekje, Goguryeo, and Silla (BCE 57 – CE 688) all fought over Korea's capital.</figcaption></figure>
           </section>
         <section class="box">
